fixed overflow logo text

--- a/css/appster_layout.css
+++ b/css/appster_layout.css
@@ -75,6 +75,7 @@
 }
 #appster_edit_workspace {
     position: absolute;
+    overflow: auto;
     width: 100%;
     left: 0%;
     height: 90%;
